runFormatTest(import.meta, ["lwc"]);
runFormatTest(import.meta, ["lwc"], { embeddedLanguageFormatting: "off" });
