// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`quotes.html - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["lwc"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div double-quoted="{data}"    single-quoted='{data}'
unquoted={data}>   </div>

<div class="{data}"    class='{data}'
class={data}>   </div>

<div
  single-quote="'"
  single-quote-escaped-in-single-quote='&apos;'
  single-quote-escaped-in-double-quote="&apos;"
  double-quote='"'
  double-quote-escaped-in-single-quote='&quot;'
  double-quote-escaped-in-double-quote="&quot;"
></div>
=====================================output=====================================
<div double-quoted="{data}" single-quoted="{data}" unquoted={data}></div>

<div class="{data}" class="{data}" class={data}></div>

<div
  single-quote="'"
  single-quote-escaped-in-single-quote="'"
  single-quote-escaped-in-double-quote="'"
  double-quote='"'
  double-quote-escaped-in-single-quote='"'
  double-quote-escaped-in-double-quote='"'
></div>

================================================================================
`;

exports[`quotes.html format 1`] = `
====================================options=====================================
parsers: ["lwc"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div double-quoted="{data}"    single-quoted='{data}'
unquoted={data}>   </div>

<div class="{data}"    class='{data}'
class={data}>   </div>

<div
  single-quote="'"
  single-quote-escaped-in-single-quote='&apos;'
  single-quote-escaped-in-double-quote="&apos;"
  double-quote='"'
  double-quote-escaped-in-single-quote='&quot;'
  double-quote-escaped-in-double-quote="&quot;"
></div>
=====================================output=====================================
<div double-quoted="{data}" single-quoted="{data}" unquoted={data}></div>

<div class="{data}" class="{data}" class={data}></div>

<div
  single-quote="'"
  single-quote-escaped-in-single-quote="'"
  single-quote-escaped-in-double-quote="'"
  double-quote='"'
  double-quote-escaped-in-single-quote='"'
  double-quote-escaped-in-double-quote='"'
></div>

================================================================================
`;
